solving bug with snap align

--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -16,11 +16,13 @@
     gap:var(--gap);
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
-    scroll-padding: var(--gap);
+    scroll-padding-left: var(--gap);
     overflow-x: auto;
+    overscroll-behavior-x: contain;
+    scroll-snap-stop: always;
 }
 
-.track > * {
+.track > *:not(:last-child) {
     flex-shrink: 0;
     scroll-snap-align: start;
 }
